--- a/styles/pdf.css
+++ b/styles/pdf.css
@@ -1,3 +1,103 @@
+.panel {
+    margin-bottom: 20px;
+    background-color: #ffffff;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+.panel-body {
+    padding: 15px;
+}
+
+.panel-heading {
+    padding: 10px 15px;
+    border-bottom: 1px solid transparent;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+}
+
+.panel-title {
+    color: inherit;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.panel-title>a,
+.panel-title>small,
+.panel-title>.small,
+.panel-title>small>a,
+.panel-title>.small>a {
+    color: inherit;
+}
+
+.panel-default {
+    border-color: #dddddd;
+}
+
+.panel-default>.panel-heading {
+    color: #333333;
+    background-color: #f5f5f5;
+    border-color: #dddddd;
+}
+
+.panel-primary {
+    border-color: #337ab7;
+    background-color: #D8EDF8;
+}
+
+.panel-primary>.panel-heading {
+    color: #ffffff;
+    background-color: #337ab7;
+    border-color: #337ab7;
+}
+
+.panel-success {
+    border-color: #DFF0D7;
+    background-color: #DFF0D7;
+}
+
+.panel-success>.panel-heading {
+    color: #ffffff;
+    background-color: #58B957;
+    border-color: #DFF0D7;
+}
+
+.panel-info {
+    border-color: #E7F2FA;
+    background-color: #E7F2FA;
+}
+
+.panel-info>.panel-heading {
+    background-color: #67AFE0;
+    color: #ffffff;
+    border-color: #E7F2FA;
+}
+
+.panel-warning {
+    border-color: #FFEDCA;
+    background-color: #FFEDCA;
+}
+
+.panel-warning>.panel-heading {
+    color: #ffffff;
+    background-color: #F1B37A;
+    border-color: #FFEDCA;
+}
+
+.panel-danger {
+    border-color: #F2DEDE;
+    background-color: #F2DEDE;
+}
+
+.panel-danger>.panel-heading {
+    color: #ffffff;
+    background-color: #DB524B;
+    border-color: #F2DEDE;
+}
+
+
 /* Table of contents link color */
 
 .book-summary ul.summary li.active>a {
